--- a/my-awesome-site/_includes/header.html
+++ b/my-awesome-site/_includes/header.html
@@ -1,7 +1,6 @@
 
-<nav class="navbar bg-color-change navbar-dark navbar-default fixed-top navbar-expand-lg section-nav">
-  <div class="container">
-    <a class="navbar-brand" href="#home">Thigpen Designs</a>
+<nav class="navbar navbar-default fixed-top navbar-expand-lg navbar-light bg-light">
+    <a class="ml-3 navbar-brand" href="#home">Thigpen Designs</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,13 +19,11 @@
           <a class="nav-link" href="#illustration">Illustration</a>
         <li class="nav-item">
           <li class="nav-item">
-            <a class="nav-link" href="#illustration">Animation</a>
+            <a class="nav-link" href="#illustration">Animation</a></li>
           <li class="nav-item">
           <a class="nav-link" href="#about">About</a>
-        </li>
         </li>
 
       </ul>
     </div>
-  </div>
 </nav>
