--- a/my-awesome-site/_includes/footer.html
+++ b/my-awesome-site/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer-color page-footer font-small row-grey-alt pt-4 section-footer">
+<footer class="pt-4 section-footer">
 
   <!-- Footer Links -->
   <div class="container-fluid text-center text-md-left">
@@ -66,7 +66,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="../assets/javascripts/helper.js"></script>
-    <script src="../assets/javascripts/blazy.js"></script>
     <script src="../assets/javascripts/wow.js"></script>
     <script>new WOW().init();</script>
   </body>
