--- a/my-awesome-site/_includes/info_section.html
+++ b/my-awesome-site/_includes/info_section.html
@@ -7,14 +7,14 @@
             <h3 class="ml-2">{{ include.subtitle }}</h3>
           </div>
           <div class="row">
-            <p class="ml-2 primary-color">{{ include.blurb }}</p>
+            <p class="ml-2 primary-color"><i>{{ include.blurb }}</i></p>
             <div class="row">
               <div class="col-sm">
                 <div class="row p-1">
-                  <div class="col-xs-12 col-lg-4">
+                  <div class="col-xs-12 col-lg-{{ include.image-size }}">
                     <img class="img-circle img-size-small b-lazy" data-src="assets/img/{{ include.image }}" src="assets/img/{{ include.image }}" />
                   </div>
-                  <div  class="col-xs-12 col-lg-8">
+                  <div  class="col-xs-12 col-lg-{{ include.paragraph-size }}">
                     <p class="primary-color">
                       {{ include.content }}
                     </p>
