--- a/my-awesome-site/_includes/footer.html
+++ b/my-awesome-site/_includes/footer.html
@@ -7,7 +7,7 @@
     <div class="row">
 
       <!-- Grid column -->
-      <div class="col-md-6 mt-md-0 mt-3 px-5">
+      <div class="col-md-4 mt-md-0 mt-3 px-5">
 
         <!-- Content -->
         <h5 class="text-uppercase">Thigpen Designs</h5>
@@ -19,7 +19,7 @@
       <hr class="clearfix w-100 d-md-none pb-3">
 
       <!-- Grid column -->
-      <div class="col-md-6 mb-md-0 mb-3">
+      <div class="col-md-4 mb-md-0 mb-3">
 
         <!-- Links -->
         <h5 class="text-uppercase">Links</h5>
@@ -46,6 +46,19 @@
         </ul>
       </div>
       <!-- Grid column -->
+      <div class="col-md-4 mb-md-0 mb-3">
+
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none pb-3">
+
+        <h5 class="text-uppercase">Updates</h5>
+
+        <p>
+          {% include post-update.html %}
+        </p>
+
+      </div>
 
     </div>
     <!-- Grid row -->
