--- a/my-awesome-site/_layouts/post.html
+++ b/my-awesome-site/_layouts/post.html
@@ -26,7 +26,7 @@ layout: default-internal-post
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
 
-<div class="post-categories">
+<!-- <div class="post-categories">
   {% if post %}
     {% assign categories = post.categories %}
   {% else %}
@@ -36,4 +36,4 @@ layout: default-internal-post
   <a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
   {% unless forloop.last %}&nbsp;{% endunless %}
   {% endfor %}
-</div>
+</div> -->
