footer <p> removal with jekyll magic

--- a/my-awesome-site/_layouts/home.html
+++ b/my-awesome-site/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
       </div>
       <div class="row">
         <div class="col">
-          <h4>And I'm a creative <span class="home-text-change" id="textswap"> person </span>.</h4>
+          <h4>And I'm a creative <span class="front-page-text-swap" id="textswap"> person </span>.</h4>
         </div>
       </div>
     </div>
