--- a/my-awesome-site/_sass/_layout.scss
+++ b/my-awesome-site/_sass/_layout.scss
@@ -707,3 +707,12 @@ section h1 {
     font-size: 16px;
   }
 }
+
+.front-page-text-swap {
+  color: $color7;
+}
+
+.footer-image-update {
+  border-radius: 50%;
+  width: 80%;
+}
