--- a/my-awesome-site/_includes/post-update.html
+++ b/my-awesome-site/_includes/post-update.html
@@ -1,6 +1,13 @@
 
-  {% for post in site.categories.update limit:1 %}
-    <a href="{{ post.url }}" ><h3 class="card-title mt-0">{{ post.title }}</h3></a>
-    <p class="card-text">{{ post.excerpt | truncatewords: 20 }}</p>
-    <a href="{{ post.url }}">Read more</a>
+  {% for post in site.categories.update limit:1 | remove: '<p>' %}
+    <a href="{{ post.url | remove: '<p>' | remove: '</p>' }}" ><h3 class="card-title mt-0">{{ post.title | remove: '<p>' }}</h3></a>
+    <div class="d-flex flex-row">
+      <div <div class="col-2 p-0">
+        <a href="{{ post.url | remove: '<p>' }}"><img class="footer-image-update" src="/assets/img/{{ post.image }}"  /></a>
+      </div>
+      <div class="col-10">
+        {{ post.excerpt | remove: '<p>' | truncatewords: 20 }}
+        <a href="{{ post.url }}">Read more</a>
+      </div>
+    </div>
 {% endfor %}
