updated github.io page build error

--- a/my-awesome-site/_includes/card-post-about.html
+++ b/my-awesome-site/_includes/card-post-about.html
@@ -1,4 +1,4 @@
-<!-- <div class="card-deck col-sm-12 cold-md-12 mb-3">
+<div class="card-deck col-sm-12 cold-md-12 mb-3">
   {% for post in site.categories.animation %}
   <div class="card thumbnail wow fadeIn">
     <img class="card-img-top mb-0" src="/assets/img/{{ post.image }}" alt="{{ post.title }}">
@@ -8,4 +8,4 @@
     </div>
   </div>
 {% endfor %}
-</div> -->
+</div>
