closer ot fixing symlink problem

--- a/my-awesome-site/_layouts/page-internal.html
+++ b/my-awesome-site/_layouts/page-internal.html
@@ -13,4 +13,8 @@ layout: default-internal
       {{ content }}
     </div>
 
+    <div class="d-flex justify-content-center">
+
+      {% include card-post-animation.html %}
+    </div>
   </article>
