revamped how links/examples are processed, seems to be working

--- a/my-awesome-site/_layouts/page-internal.html
+++ b/my-awesome-site/_layouts/page-internal.html
@@ -11,10 +11,9 @@ layout: default-internal
 
     <div class="px-5 pt-3 post-content">
       {{ content }}
+      <div class="d-flex justify-content-center">
+        {{ examples }}
+      </div>
     </div>
 
-    <div class="d-flex justify-content-center">
-
-      {% include card-post-animation.html %}
-    </div>
   </article>
