--- a/my-awesome-site/_sass/_layout.scss
+++ b/my-awesome-site/_sass/_layout.scss
@@ -1,6 +1,9 @@
 // Layout
 //
 // Styles for managing the structural hierarchy of the site.
+.scott {
+  color: red;
+}
 
 .container {
   max-width: 38rem;
